<resources>
    <string name="app_name">Local-E-Shop</string>

    <string name="content">Your local e-shopping trusted seller\nExpress deliveries/Easy returns</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_out_of_coverage">OutOfCoverage</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_track_order">Track Order</string>
    <string name="action_invite_friends">Invite Friends</string>
    <string name="action_contact_us">Contact us</string>
    <string name="action_policies">Policies</string>
    <string name="search_products">Search Products, Brands etc.</string>
    <string name="out_of_coverage">"Oops,\nYou dont have internet Connectivity.\nPlease check wifi or data connection</string>
    <string name="service_not_available">Location is not accessible</string>
    <string name="invalid_lat_long_used">Invalid location passed to Geocoder</string>
    <string name="no_address_found">No Address is found for given location</string>
    <string name="address_found">Address is found for given location</string>
    <string name="title_activity_main_page_navigation">MainPageNavigation</string>

    <string name="drawer_title1">Lifestyle</string>
    <string name="drawer_title2">Home \u0026 Living</string>
    <string name="drawer_title3">Electronics</string>
    <string name="drawer_title4">Books \u0026 Entertainment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_no_delivery_address">NoDeliveryAddress</string>

    <string name="hello_world">Hello world!</string>
    <string name="NoStoredDeliveryAddress">No Stored delivery address</string>
    <string name="Add_Delivery_Address">Add Delivery Address</string>
    <string name="Temporary_User">Temporary</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter your email id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="pass_details">Show Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sgn_up"> <u> Sign Up </u></string>
    <string name="forgot_pass"> <u> Forgot password? </u>  </string>
    <string name="fac">  Facebook </string>
    <string name="gog">  Google </string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


</resources>
