<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sudeep.myapplication.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:background="@drawable/text_border"
                android:layout_marginTop="50dp"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:background="@drawable/text_border"
                android:layout_marginTop="18dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_details"
                android:id="@+id/checkBox"
                android:layout_marginTop="18dp"/>

            <Button android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="#ffb266"
                android:maxLines="1"
                android:maxWidth="@dimen/abc_action_bar_default_height_material" />

        <LinearLayout android:id="@+id/sign_up_forgot" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">

            <Button android:id="@+id/forgot_password"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/forgot_pass"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
             />
            <View
                android:layout_width="2dp"
                android:layout_marginTop="32dp"
                android:layout_marginLeft ="10dp"
                android:layout_height="20dp"
                android:background="#000000"
             />
            <Button android:id="@+id/sign_up"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/sgn_up"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                />

        </LinearLayout>
            <LinearLayout android:id="@+id/sign_up_exist" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical"
                android:layout_marginTop="25dp">

                <Button android:id="@+id/sign_fc"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/fac"
                    android:layout_weight="1"
                    android:background="#ff6666"
                    />

                <Button android:id="@+id/sign_go"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/gog"
                    android:background="#0080ff"
                    android:layout_weight="1"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>



